--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
+
 {
-  "name": "Booming Store",
-  "short_name": "Booming",
-  "description": "Boutik an liy ou fè konfyans pou tout acha ou yo.",
+  "name": "Booming Films",
+  "short_name": "Films",
+  "description": "Yon aplikasyon pou dekouvri epi gade fim.",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#007bff",
+  "background_color": "#141414",
+  "theme_color": "#E50914",
   "icons": [
     {
-      "src": "images/icons/booming-optimized-192.png",
+      "src": "images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icons/booming-optimized-512.png",
+      "src": "images/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
